# mdk-android

sdk/: build.gradle
sdk/src/main/cpp/: CMakeLists.txt  MDKPlayerJNI.cpp
sdk/src/main/java/com/mediadevkit/sdk/: MDKPlayer.java
